--- a/index.html
+++ b/index.html
@@ -429,6 +429,66 @@
                         </div>
                 </section>
             </main>
+            <footer class="footer">
+                <div class="container">
+                    <div class="logo-wrapper footer-logo-wrapper">
+                        <svg class="logo-icon">
+                            <use href="./img/symbols.svg#logo-icon"></use>
+                        </svg>
+                        <a href="./index.html" class="logo-title">Yacht Adventures</a>
+                    </div>
+                    <ul class="footer-list">
+                        <li class="footer-item"><a href="#" class="footer-link">about</a></li>
+                        <li class="footer-item"><a href="#" class="footer-link">yachts</a></li>
+                        <li class="footer-item"><a href="#" class="footer-link">reviews</a></li>
+                    </ul>
+                    <div class="footer-social-wrapper">
+                        <h5 class="footer-social-title">We in social</h5>
+                        <ul class="footer-social-list">
+                            <li class="footer-social-item">
+                                <a href="#">
+                                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <rect x="0.5" y="0.5" width="31" height="31" rx="5.5" stroke="#F6F5EF"
+                                            stroke-opacity="0.5" />
+                                        <path
+                                            d="M18.5525 10.49H20V8.10502C19.2991 8.03403 18.5949 7.99898 17.8903 8.00002C15.796 8.00002 14.3638 9.24502 14.3638 11.525V13.49H12V16.16H14.3638V23H17.1973V16.16H19.5534L19.9076 13.49H17.1973V11.7875C17.1973 11 17.4129 10.49 18.5525 10.49Z"
+                                            fill="#F6F5EF" />
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="footer-social-item">
+                                <a href="#">
+                                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <rect x="0.5" y="0.5" width="31" height="31" rx="5.5" stroke="#F6F5EF"
+                                            stroke-opacity="0.5" />
+                                        <path
+                                            d="M19.738 11.422C19.5719 11.422 19.4095 11.4713 19.2713 11.5636C19.1332 11.6559 19.0255 11.7871 18.9619 11.9405C18.8984 12.094 18.8817 12.2629 18.9141 12.4259C18.9466 12.5888 19.0266 12.7385 19.144 12.856C19.2615 12.9734 19.4112 13.0534 19.5741 13.0859C19.7371 13.1183 19.906 13.1016 20.0595 13.0381C20.2129 12.9745 20.3441 12.8668 20.4364 12.7287C20.5287 12.5905 20.578 12.4281 20.578 12.262C20.578 12.0392 20.4895 11.8256 20.332 11.668C20.1744 11.5105 19.9608 11.422 19.738 11.422ZM22.958 13.116C22.9444 12.5352 22.8356 11.9606 22.636 11.415C22.458 10.9482 22.181 10.5255 21.824 10.176C21.4774 9.8172 21.0537 9.54192 20.585 9.371C20.0409 9.16531 19.4656 9.05405 18.884 9.042C18.142 9 17.904 9 16 9C14.096 9 13.858 9 13.116 9.042C12.5344 9.05405 11.9591 9.16531 11.415 9.371C10.9472 9.54365 10.5239 9.81869 10.176 10.176C9.8172 10.5226 9.54192 10.9463 9.371 11.415C9.16531 11.9591 9.05405 12.5344 9.042 13.116C9 13.858 9 14.096 9 16C9 17.904 9 18.142 9.042 18.884C9.05405 19.4656 9.16531 20.0409 9.371 20.585C9.54192 21.0537 9.8172 21.4774 10.176 21.824C10.5239 22.1813 10.9472 22.4563 11.415 22.629C11.9591 22.8347 12.5344 22.946 13.116 22.958C13.858 23 14.096 23 16 23C17.904 23 18.142 23 18.884 22.958C19.4656 22.946 20.0409 22.8347 20.585 22.629C21.0537 22.4581 21.4774 22.1828 21.824 21.824C22.1826 21.4758 22.4598 21.0527 22.636 20.585C22.8356 20.0394 22.9444 19.4648 22.958 18.884C22.958 18.142 23 17.904 23 16C23 14.096 23 13.858 22.958 13.116ZM21.698 18.8C21.6929 19.2443 21.6124 19.6846 21.46 20.102C21.3482 20.4066 21.1687 20.6819 20.935 20.907C20.708 21.1384 20.4333 21.3175 20.13 21.432C19.7126 21.5844 19.2723 21.6649 18.828 21.67C18.128 21.705 17.869 21.712 16.028 21.712C14.187 21.712 13.928 21.712 13.228 21.67C12.7666 21.6786 12.3072 21.6076 11.87 21.46C11.58 21.3397 11.3179 21.161 11.1 20.935C10.8677 20.7101 10.6904 20.4346 10.582 20.13C10.4111 19.7066 10.3163 19.2564 10.302 18.8C10.302 18.1 10.26 17.841 10.26 16C10.26 14.159 10.26 13.9 10.302 13.2C10.3051 12.7457 10.3881 12.2956 10.547 11.87C10.6702 11.5745 10.8594 11.3112 11.1 11.1C11.3127 10.8593 11.5755 10.6682 11.87 10.54C12.2967 10.386 12.7464 10.3056 13.2 10.302C13.9 10.302 14.159 10.26 16 10.26C17.841 10.26 18.1 10.26 18.8 10.302C19.2443 10.3071 19.6846 10.3876 20.102 10.54C20.4201 10.6581 20.7056 10.85 20.935 11.1C21.1644 11.315 21.3436 11.5779 21.46 11.87C21.6156 12.2963 21.6961 12.7462 21.698 13.2C21.733 13.9 21.74 14.159 21.74 16C21.74 17.841 21.733 18.1 21.698 18.8ZM16 12.409C15.2901 12.4104 14.5965 12.6222 14.0069 13.0176C13.4172 13.413 12.9581 13.9743 12.6873 14.6306C12.4166 15.2869 12.3465 16.0087 12.4859 16.7049C12.6252 17.401 12.9678 18.0402 13.4703 18.5417C13.9727 19.0432 14.6126 19.3845 15.309 19.5225C16.0054 19.6605 16.7271 19.589 17.3828 19.317C18.0386 19.045 18.599 18.5847 18.9933 17.9943C19.3876 17.4039 19.598 16.7099 19.598 16C19.5989 15.5276 19.5064 15.0596 19.3259 14.6231C19.1453 14.1865 18.8802 13.79 18.5458 13.4562C18.2114 13.1225 17.8144 12.8582 17.3775 12.6785C16.9406 12.4987 16.4724 12.4072 16 12.409ZM16 18.331C15.539 18.331 15.0883 18.1943 14.705 17.9382C14.3216 17.682 14.0229 17.318 13.8464 16.892C13.67 16.4661 13.6238 15.9974 13.7138 15.5452C13.8037 15.0931 14.0257 14.6777 14.3517 14.3517C14.6777 14.0257 15.0931 13.8037 15.5452 13.7138C15.9974 13.6238 16.4661 13.67 16.892 13.8464C17.318 14.0229 17.682 14.3216 17.9382 14.705C18.1943 15.0883 18.331 15.539 18.331 16C18.331 16.3061 18.2707 16.6092 18.1536 16.892C18.0364 17.1748 17.8647 17.4318 17.6483 17.6483C17.4318 17.8647 17.1748 18.0364 16.892 18.1536C16.6092 18.2707 16.3061 18.331 16 18.331Z"
+                                            fill="#F6F5EF" />
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="footer-social-item">
+                                <a href="#">
+                                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <rect x="0.5" y="0.5" width="31" height="31" rx="5.5" stroke="#F6F5EF"
+                                            stroke-opacity="0.5" />
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M19.6047 11.6247C19.0097 11.5897 17.7847 11.5547 15.9297 11.5547H15.6847C13.8997 11.5547 12.7097 11.5897 12.1147 11.6597C11.3097 11.7297 10.7497 11.9397 10.4347 12.2197C10.1547 12.4647 9.94469 12.9197 9.87469 13.5147C9.83969 13.8997 9.80469 14.7047 9.80469 15.9297V16.1047C9.80469 17.2597 9.83968 18.0647 9.90968 18.4497C10.0147 19.0097 10.1897 19.4297 10.5397 19.6747C10.8897 19.9547 11.4847 20.1297 12.3247 20.1997C12.9197 20.2347 14.1447 20.2697 15.9997 20.2697H16.2447C18.0297 20.2697 19.2197 20.2347 19.8147 20.1647C20.6197 20.0947 21.1797 19.8847 21.4947 19.6047C21.7747 19.3597 21.9847 18.9047 22.0547 18.3097C22.0897 17.9247 22.1247 17.1197 22.1247 15.8947V15.7197C22.1247 14.5647 22.0897 13.7597 22.0197 13.3747C21.9147 12.8147 21.7397 12.3947 21.3897 12.1497C21.0397 11.8697 20.4447 11.6947 19.6047 11.6247ZM18.2397 15.9297L14.3897 18.2397V13.6197L18.2397 15.9297Z"
+                                            fill="#F6F5EF" />
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="policy-wrapper">
+                        <h6 class="policy">2023. Yacht Adventures</h6>
+                        <h6 class="policy">Privacy Police</h6>
+                    </div>
+                </div>
+            </footer>
         </div>
     </div>
 
