--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                 </section>
             </main>
             <footer class="footer">
-                <div class="container">
+                <div class="container footer-container">
                     <div class="logo-wrapper footer-logo-wrapper">
                         <svg class="logo-icon">
                             <use href="./img/symbols.svg#logo-icon"></use>
@@ -483,12 +483,14 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="policy-wrapper">
-                        <h6 class="policy">2023. Yacht Adventures</h6>
-                        <h6 class="policy">Privacy Police</h6>
-                    </div>
                 </div>
             </footer>
+            <div style="background-color: #11131f;">
+                <div class="container policy-wrapper">
+                    <h6 class="policy">2023. Yacht Adventures</h6>
+                    <h6 class="policy">Privacy Police</h6>
+                </div>
+            </div>
         </div>
     </div>
 
