--- a/index.html
+++ b/index.html
@@ -428,6 +428,74 @@
                             </form>
                         </div>
                 </section>
+                <section class="recalls-section">
+                    <div class="container">
+                        <div class="recalls-title-wrapper">
+                            <p class="recalls-first-title">Yacht Adventures take pride in providing the best possible
+                                service and experience to our
+                                customers</p>
+                            <p class="recalls-second-title">Our customers have enjoyed unforgettable moments on our yachts.
+                                Don't just take our word for
+                                it -
+                                read on to find out what they have to say about their journey with us.</p>
+                        </div>
+                        <ul class="recalls">
+                            <div class="recalls-container" id="sliderContainer">
+                                <li class="recalls-slider-item">
+                                    <div class="recalls-content">
+                                        <img src="./img/recalls-one.png" alt="" class="recalls-slider-img">
+                                        <h4 class="recalls-slider-name">John Wax</h4>
+                                        <p class="recalls-slider-info">I rented the Lagoon 620 with my family for a
+                                            week-long
+                                            vacation and it was the best
+                                            decision ever. The yacht was spacious, comfortable, and luxurious, and the
+                                            crew
+                                            took
+                                            care of everything. </p>
+                                    </div>
+                                    <div class="progress-bar"></div>
+                                </li>
+                                <li class="recalls-slider-item">
+                                    <div class="recalls-content">
+                                        <img src="./img/recalls-two.png" alt="" class="recalls-slider-img">
+                                        <h4 class="recalls-slider-name">Victoria Romashenko</h4>
+                                        <p class="recalls-slider-info">The Sunseeker Manhattan 66 was the perfect choice
+                                            for
+                                            our
+                                            romantic getaway. The yacht
+                                            was
+                                            beautifully designed, with all the amenities we needed, and the crew was
+                                            attentive
+                                            and
+                                            friendly. </p>
+                                    </div>
+                                    <div class="progress-bar"></div>
+                                </li>
+                                <li class="recalls-slider-item">
+                                    <div class="recalls-content">
+                                        <img src="./img/recalls-three.png" alt="" class="recalls-slider-img">
+                                        <h4 class="recalls-slider-name">Ihor Trachuk</h4>
+                                        <p class="recalls-slider-info">The Azimut 80 was the most luxurious yacht I've
+                                            ever
+                                            been
+                                            on. The cabins were
+                                            spacious
+                                            and elegant, and the outdoor areas were perfect for relaxing and
+                                            entertaining.
+                                            Worth
+                                            every penny!</p>
+                                    </div>
+                                    <div class="progress-bar"></div>
+                                </li>
+                            </div>
+                        </ul>
+                        <div class="slider-nav" id="sliderNav">
+                            <div class="nav-dot" data-slide="0"></div>
+                            <div class="nav-dot" data-slide="1"></div>
+                            <div class="nav-dot" data-slide="2"></div>
+                        </div>
+                    </div>
+                </section>
             </main>
             <footer class="footer">
                 <div class="container footer-container">
